--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-CSE 508 : Network Security
+Course : CSE 508 Network Security
+Professor : Michalis Polychronakis
 
-Contains all the findings done towards this course.
+Repository Contains all the projects done during network security course.
+
+References :
+https://www3.cs.stonybrook.edu/~mikepo/CSE508/2017/
